<resources>
    <string name="app_name">Library System</string>

    <string name="add_member">Add a Member</string>
    <string name="add_books">Add Books</string>
    <string name="issue_books">Issue Books</string>
    <string name="return_books">Return Books</string>
    <string name="renew_books">Renew Books</string>
    <string name="remove_books">Remove Books</string>
    <string name="place_hold">Place a hold</string>
    <string name="remove_hold">Remove a hold</string>
    <string name="process_holds">Process Holds</string>
    <string name="print_transactions">Print Transactions</string>
    <string name="save_data">Save Data</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="help">Help</string>
    <string name="add_member_title">Please fill in below form and hit Register button.</string>
    <string name="action_settings">Settings</string>
    <string name="add_member_name">Name:</string>
    <string name="add_member_name_hint">your name</string>
    <string name="add_member_address">Address:</string>
    <string name="add_member_address_hint">your address</string>
    <string name="add_member_phone">Phone:</string>
    <string name="add_member_phone_hint">your phone number</string>
    <string name="add_member_register_button">REGISTER</string>
    <string name="add_member_null_name_error">Invalid name</string>
    <string name="add_member_null_address_error">Invalid address</string>
    <string name="add_member_null_phone_error">Invalid phone number</string>
    <string name="add_member_unsuccessful_notice">Register member unsuccessful</string>
    <string name="add_books_guide">Please fill in book information and hit Add button</string>
    <string name="add_book_title">Title:</string>
    <string name="add_book_title_hint">Title</string>
    <string name="add_book_author">Author:</string>
    <string name="add_book_author_hint">Author</string>
    <string name="add_book_add_button">ADD</string>
    <string name="add_member_success">Add new member successful!</string>
    <string name="add_member_confirmation">Confirmation</string>
    <string name="add_member_confirmation_name">Name:</string>
    <string name="add_member_confirmation_id">ID:</string>
    <string name="dialog_add_member_confirmation_title">Add member successfully</string>
    <string name="add_member_ok">Ok</string>
    <string name="add_member_cancel">Cancel</string>
    <string name="title_activity_add_book">AddBookActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="add_book_null_title_error">Invalid book title</string>
    <string name="add_book_null_author_error">Invalid author name</string>
    <string name="add_book_error">Add book unsuccessfully</string>
    <string name="dialog_add_book_confirmation_title">Add book successfully</string>
    <string name="add_book_confirmation_id">ID:</string>
    <string name="add_book_for_other">Fill in information for other book or finish by Back button</string>
    <string name="issue_book_header">Fill in member ID and book ID</string>
    <string name="issue_book_member_id_text_view">Member ID:</string>
    <string name="issue_book_member_id_edit_text">member ID</string>

    <string name="issue_book_member_id_edit_button">Edit</string>
    <string name="issue_book_book_id_text_view">Book ID</string>
    <string name="issue_book_book_id_edit_text">book ID</string>
    <string name="issue_book_button">Issue Book</string>
    <string name="member_not_exist">Member not exist</string>
    <string name="issue_book_invalid_member_id">Invalid member ID</string>
    <string name="issue_book_invalid_book_id">Invalid book ID</string>
    <string name="book_not_exist">Book not exist</string>
    <string name="issue_book_unsuccessfully">Issue book successfully</string>
    <string name="issue_book_successfully">Book has been issued</string>
    <string name="add_member_unsuccessful_notice_member_existed">Unsuccessful register. Member already existed.</string>
    <string name="issue_book_unsuccessfully_book_not_available">Issue book unsuccessfully. Book is not available.</string>
    <string name="issue_book_unsuccessfully_member_in_jail">Unsuccessful. Member already loaned 5 books</string>
    <string name="return_book_book_id_text_view">Book ID:</string>
    <string name="return_book_book_id_edit_text">input book id</string>
    <string name="return_book_button">Return</string>
    <string name="return_book_invalid_book_id">Invalid book id</string>
    <string name="return_book_ok_no_hold">Book has returned. No hold.</string>
    <string name="return_book_ok_has_hold">Book has returned. HAS HOLD.</string>
    <string name="return_book_fail_not_exist">Book not exists.</string>
    <string name="return_book_fail_not_issued_yet">Book has never been issued.</string>
    <string name="member_data_read_overlap_error">Member data already loaded</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renew_book_member_id_text_view">Member ID:</string>
    <string name="renew_book_member_id_hint">Input member ID</string>
    <string name="renew_book_header">Input Member ID</string>
    <string name="renew_book_member_id_edit_text">Input member id</string>
    <string name="renew_book_member_name">Name:</string>
    <string name="renew_book_member_address">Address:</string>
    <string name="renew_book_member_phone">Phone:</string>
    <string name="renew_book_loan_list_title">Loan books:</string>
    <string name="due_date">due date</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="number">1.</string>
    <string name="renew_book_member_id_invalid">Invalid member id</string>
    <string name="book_due_date">Due date:</string>
    <string name="book_not_issued">not issued yet</string>
    <string name="loan_book_header">Loan book details</string>
    <string name="renew_book_button">Renew</string>
    <string name="remove_book_header">Input book id to remove</string>
    <string name="book_on_hold">on hold</string>
    <string name="remove_book_button">Remove</string>
    <string name="remove_book_failed_not_exist">Failed. Book not exist</string>
    <string name="remove_book_failed_borrowed">Failed. Book has been issued</string>
    <string name="book_remove_failed_on_hold">Failed. Book is on hold</string>
    <string name="book_remove_ok">Done. Input book Id to remove</string>
</resources>
