<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_member_button"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill|start"
                android:layout_margin="8dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/add_member"
                />

            <Button
                android:id="@+id/add_book_button"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill|end"
                android:layout_margin="8dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/add_books"
                />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/issue_book_button"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill|start"
                android:layout_margin="8dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/issue_books"/>

            <Button
                android:id="@+id/return_book_button"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill|end"
                android:layout_margin="8dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/return_books"/>
        </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/renew_books_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|start"
            android:layout_margin="8dp"
            android:text="@string/renew_books"/>

        <Button
            android:id="@+id/remove_books_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|end"
            android:layout_margin="8dp"
            android:text="@string/remove_books"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/place_hold_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|start"
            android:layout_margin="8dp"
            android:text="@string/place_hold"/>

        <Button
            android:id="@+id/remove_hold_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|end"
            android:layout_margin="8dp"
            android:text="@string/remove_hold"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/process_holds_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|start"
            android:layout_margin="8dp"
            android:text="@string/process_holds"/>

        <Button
            android:id="@+id/print_transactions_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|end"
            android:layout_margin="8dp"
            android:text="@string/print_transactions"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_data_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|start"
            android:layout_margin="8dp"
            android:text="@string/save_data"/>

        <Button
            android:id="@+id/retrieve_data_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|end"
            android:layout_margin="8dp"
            android:text="@string/retrieve_data"/>
    </GridLayout>

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/help"/>

</LinearLayout>
