<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/book_list_item_onHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:gravity="center"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/book_list_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/book_list_item_onHold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/add_book_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/book_list_item_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_list_item_title"
        android:layout_toLeftOf="@id/book_list_item_onHold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:text="@string/due_date"/>

    <TextView
        android:id="@+id/book_list_item_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_list_item_title"
        android:layout_toLeftOf="@id/book_list_item_due_date"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:text="@string/add_book_author"/>
</RelativeLayout>
